[package]
name = "ovh"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0"
description = "Async wrapper around OVH's API."
readme = "README.md"
keywords = ["ovh", "api"]
categories = ["api-bindings"]
repository = "https://github.com/MicroJoe/rust-ovh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sha1 = { version = "0.6.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.10", features = ["macros"] }
configparser = "2.1.0"

[dev-dependencies]
clap = "3.0.0-beta.4"